@@ -13,7 +13,6 @@
 - use icons instead of colors in password entry to indicate strength
   (see: epiphany address entry)
 - investigate crashes under fc3 (with dags packages)
-- fix applet crash when using iso-8859-1 in entry
 
 0.5.x:
 - ensure complete UTF-8 support
